# Authantication-Autherization-

./: .env.example  Dockerfile  LICENSE  auth.sql  auth_middleware.py  database.py  oauth_service.py  pyproject.toml  requirements.txt  session.py  user.py  users.py
app/: __init__.py
app/core/: oauth_config.py
app/db/: __init__.py
app/middleware/: auth_middleware.py
app/models/: __init__.py  refresh_token.py
app/schemas/: __init__.py  auth.py  user.py
app/services/: auth_service.py  oauth_service.py  token_service.py
auth/: README.md  auth.py  auth_service.py  config.py  env.py  main.py  oauth.py  oauth_config.py  pyproject.toml  refresh_token.py  role.py  security.py  test_auth.py  token_service.py
auth/mnt/user-data/outputs/auth/app/schema/: auth.py
mnt/user-data/outputs/auth/app/schemas/: user.py
